--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
@@ -7241,6 +7241,7 @@ go-back=Върни се назад (Automatic Translation)
 go-to-answers=Go to Answers (Automatic Copy)
 go-to-category=Отиди на категория (Automatic Translation)
 go-to-dashboard-pages=Към страниците на таблото (Automatic Translation)
+go-to-documentation-to-learn-more-about-date-formats=Go to documentation to learn more about date formats. (Automatic Copy)
 go-to-folder=Главна папка
 go-to-live=Към "На живо" (Automatic Translation)
 go-to-marketplace=Отидете на Пазар (Automatic Translation)
