--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
@@ -7241,6 +7241,7 @@ go-back=Πήγαινε πίσω (Automatic Translation)
 go-to-answers=Go to Answers (Automatic Copy)
 go-to-category=Μετάβαση στην κατηγορία
 go-to-dashboard-pages=Μετάβαση στις Σελίδες πίνακα εργαλείων (Automatic Translation)
+go-to-documentation-to-learn-more-about-date-formats=Go to documentation to learn more about date formats. (Automatic Copy)
 go-to-folder=Μετάβαση στο φάκελο
 go-to-live=Μετάβαση στο Live (Automatic Translation)
 go-to-marketplace=Μεταβείτε στο Marketplace (Automatic Translation)
