--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_en_AU.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_en_AU.properties
@@ -7241,6 +7241,7 @@ go-back=Go Back (Automatic Copy)
 go-to-answers=Go to Answers (Automatic Copy)
 go-to-category=Go to Category (Automatic Copy)
 go-to-dashboard-pages=Go to Dashboard Pages (Automatic Copy)
+go-to-documentation-to-learn-more-about-date-formats=Go to documentation to learn more about date formats. (Automatic Copy)
 go-to-folder=Go to Folder (Automatic Copy)
 go-to-live=Go to Live (Automatic Copy)
 go-to-marketplace=Go to Marketplace (Automatic Copy)
