--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
@@ -7241,6 +7241,7 @@ go-back=Mine tagasi (Automatic Translation)
 go-to-answers=Go to Answers (Automatic Copy)
 go-to-category=Mine kategooria juurde
 go-to-dashboard-pages=Armatuurlaua lehtede avamine (Automatic Translation)
+go-to-documentation-to-learn-more-about-date-formats=Go to documentation to learn more about date formats. (Automatic Copy)
 go-to-folder=Mine kausta juurde
 go-to-live=Mine live (Automatic Translation)
 go-to-marketplace=Mine turuplatsile (Automatic Translation)
