--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
@@ -7241,6 +7241,7 @@ go-back=Revenir en arrière
 go-to-answers=Aller aux réponses
 go-to-category=Aller à la catégorie
 go-to-dashboard-pages=Aller aux page tableau de bord
+go-to-documentation-to-learn-more-about-date-formats=Go to documentation to learn more about date formats. (Automatic Copy)
 go-to-folder=Aller au dossier
 go-to-live=Aller à Live
 go-to-marketplace=Aller sur le Marketplace
