--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
@@ -7241,6 +7241,7 @@ go-back=पस जाओ (Automatic Translation)
 go-to-answers=Go to Answers (Automatic Copy)
 go-to-category=श्रेणी पर जाएँ
 go-to-dashboard-pages=डैशबोर्ड पेज पर जाएं (Automatic Translation)
+go-to-documentation-to-learn-more-about-date-formats=Go to documentation to learn more about date formats. (Automatic Copy)
 go-to-folder=फ़ोल्डर में जाओ
 go-to-live=लाइव करने के लिए जाओ (Automatic Translation)
 go-to-marketplace=बाज़ार में जाएं (Automatic Translation)
