--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
@@ -7241,6 +7241,7 @@ go-back=戻る
 go-to-answers=回答に移動
 go-to-category=カテゴリを参照する
 go-to-dashboard-pages=ダッシュボードページに移動
+go-to-documentation-to-learn-more-about-date-formats=Go to documentation to learn more about date formats. (Automatic Copy)
 go-to-folder=フォルダを参照する
 go-to-live=本番環境へ移動
 go-to-marketplace=マーケットプレースにアクセスする
