--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
@@ -7241,6 +7241,7 @@ go-back=gå tilbake (Automatic Translation)
 go-to-answers=Go to Answers (Automatic Copy)
 go-to-category=Gå til kategori
 go-to-dashboard-pages=Gå til Instrumentbordsider (Automatic Translation)
+go-to-documentation-to-learn-more-about-date-formats=Go to documentation to learn more about date formats. (Automatic Copy)
 go-to-folder=Gå til mappe
 go-to-live=Gå til Direktesend (Automatic Translation)
 go-to-marketplace=Gå til markedsplassen
