--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -7241,6 +7241,7 @@ go-back=Terug
 go-to-answers=Naar antwoorden
 go-to-category=Naar categorie gaan
 go-to-dashboard-pages=Ga naar dashboard-pagina's
+go-to-documentation-to-learn-more-about-date-formats=Go to documentation to learn more about date formats. (Automatic Copy)
 go-to-folder=Naar map gaan
 go-to-live=Ga naar live-omgeving
 go-to-marketplace=Ga naar Marktplein
