--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -7241,6 +7241,7 @@ go-back=Voltar
 go-to-answers=Vá para Respostas
 go-to-category=Ir para Categoria
 go-to-dashboard-pages=Ir para as Páginas do Painel
+go-to-documentation-to-learn-more-about-date-formats=Go to documentation to learn more about date formats. (Automatic Copy)
 go-to-folder=Ir para pasta
 go-to-live=Ir para o Live
 go-to-marketplace=Ir para o Marketplace
