--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
@@ -7241,6 +7241,7 @@ go-back=întoarce-te (Automatic Translation)
 go-to-answers=Go to Answers (Automatic Copy)
 go-to-category=Mergi la Categorie
 go-to-dashboard-pages=Salt la Pagini tablou de bord (Automatic Translation)
+go-to-documentation-to-learn-more-about-date-formats=Go to documentation to learn more about date formats. (Automatic Copy)
 go-to-folder=Mergi la Director
 go-to-live=Mergi la Live (Automatic Translation)
 go-to-marketplace=Mergi la Marketplace (Automatic Translation)
