--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
@@ -7241,6 +7241,7 @@ go-back=Go Back (Automatic Copy)
 go-to-answers=Go to Answers (Automatic Copy)
 go-to-category=பிரிவுக்கு செல்லவும்
 go-to-dashboard-pages=டேஷ்போர்டு பக்கங்களுக்கு செல்
+go-to-documentation-to-learn-more-about-date-formats=Go to documentation to learn more about date formats. (Automatic Copy)
 go-to-folder=ஃபோல்டருக்கு செல்
 go-to-live=லைவ்-க்குச்செல்க
 go-to-marketplace=Go to Marketplace (Automatic Copy)
