--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
@@ -7241,6 +7241,7 @@ go-back=ย้อนกลับ
 go-to-answers=ไปที่คำตอบ
 go-to-category=ไปที่หมวดหมู่
 go-to-dashboard-pages=ไปที่หน้าแดชบอร์ด
+go-to-documentation-to-learn-more-about-date-formats=Go to documentation to learn more about date formats. (Automatic Copy)
 go-to-folder=ไปที่โฟลเดอร์
 go-to-live=ไปที่ไลฟ์
 go-to-marketplace=ไปที่มาร์เก็ตเพลส
