--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
@@ -7241,6 +7241,7 @@ go-back=返回上一頁
 go-to-answers=前往答案
 go-to-category=到類別
 go-to-dashboard-pages=轉到儀表板頁面
+go-to-documentation-to-learn-more-about-date-formats=Go to documentation to learn more about date formats. (Automatic Copy)
 go-to-folder=到資料夾
 go-to-live=轉到 Live
 go-to-marketplace=轉到 Marketplace
