--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
@@ -7241,6 +7241,7 @@ go-back=Gå tilbage (Automatic Translation)
 go-to-answers=Go to Answers (Automatic Copy)
 go-to-category=Gå til kategori
 go-to-dashboard-pages=Go to Dashboard Pages (Automatic Copy)
+go-to-documentation-to-learn-more-about-date-formats=Go to documentation to learn more about date formats. (Automatic Copy)
 go-to-folder=Gå til mappe
 go-to-live=Gå til Live (Automatic Translation)
 go-to-marketplace=Gå til Marketplace (Automatic Translation)
