--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_gl.properties
@@ -7241,6 +7241,7 @@ go-back=Go Back (Automatic Copy)
 go-to-answers=Go to Answers (Automatic Copy)
 go-to-category=Ir á categoría
 go-to-dashboard-pages=Go to Dashboard Pages (Automatic Copy)
+go-to-documentation-to-learn-more-about-date-formats=Go to documentation to learn more about date formats. (Automatic Copy)
 go-to-folder=Ir á carpeta
 go-to-live=Ir para Live
 go-to-marketplace=Go to Marketplace (Automatic Copy)
