--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -7241,6 +7241,7 @@ go-back=Visszalépés
 go-to-answers=Ugrás a válaszokra
 go-to-category=Kategóriához lépés
 go-to-dashboard-pages=Menj az Irányítópult oldalakra
+go-to-documentation-to-learn-more-about-date-formats=Go to documentation to learn more about date formats. (Automatic Copy)
 go-to-folder=Mappához ugrás
 go-to-live=Élesbe menni
 go-to-marketplace=Ugrás a piactérre
