--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
@@ -7241,6 +7241,7 @@ go-back=grįžk atgal (Automatic Translation)
 go-to-answers=Go to Answers (Automatic Copy)
 go-to-category=Eiti į kategoriją (Automatic Translation)
 go-to-dashboard-pages=Eiti į ataskaitų srities puslapius (Automatic Translation)
+go-to-documentation-to-learn-more-about-date-formats=Go to documentation to learn more about date formats. (Automatic Copy)
 go-to-folder=Eiti į aplanką (Automatic Translation)
 go-to-live=Eiti į Live (Automatic Translation)
 go-to-marketplace=Eiti į "Marketplace" (Automatic Translation)
