--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
@@ -7241,6 +7241,7 @@ go-back=Вернуться (Automatic Translation)
 go-to-answers=Go to Answers (Automatic Copy)
 go-to-category=Перейти к категории
 go-to-dashboard-pages=Перейти к страницам панели мониторинга (Automatic Translation)
+go-to-documentation-to-learn-more-about-date-formats=Go to documentation to learn more about date formats. (Automatic Copy)
 go-to-folder=Перейти к папке
 go-to-live=Перейти к жизни (Automatic Translation)
 go-to-marketplace=Перейти к Marketplace (Automatic Translation)
