--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -7241,6 +7241,7 @@ go-back=Gå tillbaka
 go-to-answers=Gå till Svar
 go-to-category=Gå till kategori
 go-to-dashboard-pages=Gå till sidor i instrumentpanelen
+go-to-documentation-to-learn-more-about-date-formats=Go to documentation to learn more about date formats. (Automatic Copy)
 go-to-folder=Gå till mapp
 go-to-live=Gå till Live
 go-to-marketplace=Gå till Marketplace
