--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
@@ -3050,7 +3050,7 @@ channel-id=شناسه کانال (Automatic Translation)
 channel-name=Channel Name (Automatic Copy)
 channel-selected=کانال انتخاب شده (Automatic Translation)
 channels=کانال ها
-channels-tab-description=Channels can only be assigned to a single property at a time. Sites belonging to a channel will be automatically selected when a channel has been selected. (Automatic Copy)
+channels-tab-description=Channels can only be assigned to a single property at a time. (Automatic Copy)
 chapter=سرفصل
 chapters=سرفصل ها
 character-options=گزینه های کاراکتر (Automatic Translation)
@@ -14960,7 +14960,7 @@ sites-have-required-vocabularies.-you-need-to-create-at-least-one-category-in-al
 sites-home=خانه سایت‌ها
 sites-joined=سایت‌هایی که من به آنها متصل شده‌ام
 sites-owned=سایت‌های من
-sites-tab-description=Sites can only be assigned to a single property at a time. All desired sites must be selected individually, including those that have a child relationships to parent sites. Sites belonging to a channel are required until the channel is deselected. (Automatic Copy)
+sites-tab-description=Sites can only be assigned to a single property at a time. All desired sites must be selected individually, including those that have a child relationships to parent sites. (Automatic Copy)
 sites-that-i-administer=سایت‌هایی که من مدیریت می کنم.
 sites-to-sync-x=Sites to Sync - {0} (Automatic Copy)
 size=اندازه
