--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -3050,7 +3050,7 @@ channel-id=Kanavan ID
 channel-name=Kanavan nimi
 channel-selected=Valittu Kanava
 channels=Kanavat
-channels-tab-description=Kanavia voi määrittää vain yhdelle ominaisuudelle kerralla. Kanavalle kuuluvat sivustot valitaan automaattisesti, kun kanava valitaan.
+channels-tab-description=Channels can only be assigned to a single property at a time. (Automatic Copy)
 chapter=Kappale
 chapters=Kappaleet
 character-options=Merkkivalinnat
@@ -14959,7 +14959,7 @@ sites-have-required-vocabularies.-you-need-to-create-at-least-one-category-in-al
 sites-home=Sivustot koti
 sites-joined=Sivustot joihin olen liittynyt
 sites-owned=Omistamani sivustot
-sites-tab-description=Sivustoja voi määrittää vain yhdelle ominaisuudelle kerralla. Kaikki halutut sivustot täytyy valita yksitellen, mukaan lukien ne, joilla on alatason suhde ylätason sivustoihin. Kanavalle kuuluvat sivustot ovat pakollisia, kunnes kanavan valinta poistetaan.
+sites-tab-description=Sites can only be assigned to a single property at a time. All desired sites must be selected individually, including those that have a child relationships to parent sites. (Automatic Copy)
 sites-that-i-administer=Sivustot joita ylläpidän
 sites-to-sync-x=Synkronoitavat Sivustot – {0}
 size=Koko
