--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
@@ -3050,7 +3050,7 @@ channel-id=ID de canal
 channel-name=Channel Name (Automatic Copy)
 channel-selected=Canal sélectionné
 channels=Canaux
-channels-tab-description=Channels can only be assigned to a single property at a time. Sites belonging to a channel will be automatically selected when a channel has been selected. (Automatic Copy)
+channels-tab-description=Channels can only be assigned to a single property at a time. (Automatic Copy)
 chapter=Chapitre
 chapters=Chapitres
 character-options=Options de caractère
@@ -14960,7 +14960,7 @@ sites-have-required-vocabularies.-you-need-to-create-at-least-one-category-in-al
 sites-home=Page d'accueil des sites
 sites-joined=Sites que j'ai rejoint
 sites-owned=Sites qui m'appartiennent
-sites-tab-description=Sites can only be assigned to a single property at a time. All desired sites must be selected individually, including those that have a child relationships to parent sites. Sites belonging to a channel are required until the channel is deselected. (Automatic Copy)
+sites-tab-description=Sites can only be assigned to a single property at a time. All desired sites must be selected individually, including those that have a child relationships to parent sites. (Automatic Copy)
 sites-that-i-administer=Sites que j'administre
 sites-to-sync-x=Sites à synchroniser - {0}
 size=Taille
