--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
@@ -3050,7 +3050,7 @@ channel-id=चैनल आईडी
 channel-name=Channel Name (Automatic Copy)
 channel-selected=चैनल चयनित
 channels=चैनलस
-channels-tab-description=Channels can only be assigned to a single property at a time. Sites belonging to a channel will be automatically selected when a channel has been selected. (Automatic Copy)
+channels-tab-description=Channels can only be assigned to a single property at a time. (Automatic Copy)
 chapter=चॅप्टर
 chapters=चॅप्टरस
 character-options=चरित्र विकल्प (Automatic Translation)
@@ -14960,7 +14960,7 @@ sites-have-required-vocabularies.-you-need-to-create-at-least-one-category-in-al
 sites-home=साइट्स होम (Automatic Translation)
 sites-joined=साइटें मैं शामिल हो गए हैं (Automatic Translation)
 sites-owned=साइटें मैं खुद (Automatic Translation)
-sites-tab-description=Sites can only be assigned to a single property at a time. All desired sites must be selected individually, including those that have a child relationships to parent sites. Sites belonging to a channel are required until the channel is deselected. (Automatic Copy)
+sites-tab-description=Sites can only be assigned to a single property at a time. All desired sites must be selected individually, including those that have a child relationships to parent sites. (Automatic Copy)
 sites-that-i-administer=साइटें जो मैं प्रशासित करता हूं (Automatic Translation)
 sites-to-sync-x=सिंक के लिए साइटें - {0}
 size=साइज़
