--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -3050,7 +3050,7 @@ channel-id=Csatornaazonosító
 channel-name=Csatorna neve
 channel-selected=Csatorna kiválasztva
 channels=Csatornák
-channels-tab-description=A csatornák egyszerre csak egy tulajdonsághoz rendelhetők hozzá. Egy csatornához tartozó webhelyek kijelölése automatikusan megtörténik a csatorna kijelölése után.
+channels-tab-description=Channels can only be assigned to a single property at a time. (Automatic Copy)
 chapter=Fejezet
 chapters=Fejezetek
 character-options=Karakterek lehetőségei
@@ -14963,7 +14963,7 @@ sites-have-required-vocabularies.-you-need-to-create-at-least-one-category-in-al
 sites-home=Webhelyek alapoldala
 sites-joined=Saját webhelytagságok
 sites-owned=Saját webhelyek
-sites-tab-description=A webhelyek egyszerre csak egy tulajdonsághoz rendelhetők hozzá. A kívánt webhelyek csak egyénileg választhatók ki, azokat is ideértve, amelyek fölérendelt webhelyekkel alárendelt kapcsolatban vannak. Az egy csatornához tartozó webhelyek a csatorna kijelölésének a megszüntetéséig kötelezőek.
+sites-tab-description=Sites can only be assigned to a single property at a time. All desired sites must be selected individually, including those that have a child relationships to parent sites. (Automatic Copy)
 sites-that-i-administer=Webhelyek, amiket án adminisztrálok
 sites-to-sync-x=Szinkronizálandó webhelyek - {0}
 size=Méret
