--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
@@ -3049,7 +3049,7 @@ channel-id=ID canale (Automatic Translation)
 channel-name=Channel Name (Automatic Copy)
 channel-selected=Canale selezionato (Automatic Translation)
 channels=Canali (Automatic Translation)
-channels-tab-description=Channels can only be assigned to a single property at a time. Sites belonging to a channel will be automatically selected when a channel has been selected. (Automatic Copy)
+channels-tab-description=Channels can only be assigned to a single property at a time. (Automatic Copy)
 chapter=Capitolo
 chapters=Capitoli
 character-options=Opzioni carattere (Automatic Translation)
@@ -14961,7 +14961,7 @@ sites-have-required-vocabularies.-you-need-to-create-at-least-one-category-in-al
 sites-home=Home Siti
 sites-joined=Siti ai quali sono iscritto
 sites-owned=Siti di cui sono Proprietario
-sites-tab-description=Sites can only be assigned to a single property at a time. All desired sites must be selected individually, including those that have a child relationships to parent sites. Sites belonging to a channel are required until the channel is deselected. (Automatic Copy)
+sites-tab-description=Sites can only be assigned to a single property at a time. All desired sites must be selected individually, including those that have a child relationships to parent sites. (Automatic Copy)
 sites-that-i-administer=Siti che amministro
 sites-to-sync-x=Siti da sincronizzare - {0}
 size=Dimensione
