--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -3050,7 +3050,7 @@ channel-id=Kanaal-ID
 channel-name=Kanaalnaam
 channel-selected=Geselecteerd kanaal
 channels=Kanalen
-channels-tab-description=Aan kanalen kan slechts één eigenschap tegelijk worden toegewezen. Sites die bij een kanaal horen, worden automatisch geselecteerd bij het selecteren van een kanaal.
+channels-tab-description=Channels can only be assigned to a single property at a time. (Automatic Copy)
 chapter=Hoofdstuk
 chapters=Hoofdstukken
 character-options=Tekenopties
@@ -14963,7 +14963,7 @@ sites-have-required-vocabularies.-you-need-to-create-at-least-one-category-in-al
 sites-home=Sites
 sites-joined=Sites waarvan ik lid ben
 sites-owned=Sites die van mij zijn
-sites-tab-description=Sites kunnen slechts aan één eigenschap tegelijk worden toegewezen. Alle gewenste sites moeten afzonderlijk worden geselecteerd, ook sites die een onderliggende relatie hebben met bovenliggende sites. Sites die bij een kanaal horen, zijn verplicht totdat het kanaal wordt gedeselecteerd.
+sites-tab-description=Sites can only be assigned to a single property at a time. All desired sites must be selected individually, including those that have a child relationships to parent sites. (Automatic Copy)
 sites-that-i-administer=Sites die ik beheer
 sites-to-sync-x=Te synchroniseren sites - {0}
 size=Grootte
