--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl_BE.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl_BE.properties
@@ -3050,7 +3050,7 @@ channel-id=Channel ID (Automatic Copy)
 channel-name=Channel Name (Automatic Copy)
 channel-selected=Channel Selected (Automatic Copy)
 channels=Channels (Automatic Copy)
-channels-tab-description=Channels can only be assigned to a single property at a time. Sites belonging to a channel will be automatically selected when a channel has been selected. (Automatic Copy)
+channels-tab-description=Channels can only be assigned to a single property at a time. (Automatic Copy)
 chapter=Hoofdstuk
 chapters=Hoofdstukken
 character-options=Character Options (Automatic Copy)
@@ -14963,7 +14963,7 @@ sites-have-required-vocabularies.-you-need-to-create-at-least-one-category-in-al
 sites-home=Sites Home (Automatic Copy)
 sites-joined=Sites waarvan ik lid ben
 sites-owned=Sites die van mij zijn
-sites-tab-description=Sites can only be assigned to a single property at a time. All desired sites must be selected individually, including those that have a child relationships to parent sites. Sites belonging to a channel are required until the channel is deselected. (Automatic Copy)
+sites-tab-description=Sites can only be assigned to a single property at a time. All desired sites must be selected individually, including those that have a child relationships to parent sites. (Automatic Copy)
 sites-that-i-administer=Sites That I Administer (Automatic Copy)
 sites-to-sync-x=Sites to Sync - {0} (Automatic Copy)
 size=Grootte
