--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -3050,7 +3050,7 @@ channel-id=ID do canal
 channel-name=Nome do canal
 channel-selected=Canal selecionado
 channels=Canais
-channels-tab-description=Canais só podem ser atribuídos a uma única propriedade por vez. Os sites que pertencem a um canal serão selecionados automaticamente quando um canal for selecionado.
+channels-tab-description=Channels can only be assigned to a single property at a time. (Automatic Copy)
 chapter=Capítulo
 chapters=Capítulos
 character-options=Opções de caracteres
@@ -14960,7 +14960,7 @@ sites-have-required-vocabularies.-you-need-to-create-at-least-one-category-in-al
 sites-home=Página Inicial dos Sites
 sites-joined=Sites a que Eu me Associei
 sites-owned=Sites que Eu Possuo
-sites-tab-description=Os sites só podem ser atribuídos a uma única propriedade por vez. Todos os sites desejados devem ser selecionados individualmente, incluindo aqueles que possuem uma criança com relacionamentos com sites pais. Os sites que pertencem a um canal são necessários até que a seleção do canal seja removida.
+sites-tab-description=Sites can only be assigned to a single property at a time. All desired sites must be selected individually, including those that have a child relationships to parent sites. (Automatic Copy)
 sites-that-i-administer=Sites que Eu Administro
 sites-to-sync-x=Sites para sincronizar - {0}
 size=Tamanho
