--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -3050,7 +3050,7 @@ channel-id=ID de canal
 channel-name=Nom del canal
 channel-selected=Canal seleccionat
 channels=Canals
-channels-tab-description=Els canals només es poden assignar a una sola propietat alhora. Els llocs web pertanyents a un canal se seleccionaran automàticament quan s'hagi seleccionat un canal.
+channels-tab-description=Channels can only be assigned to a single property at a time. (Automatic Copy)
 chapter=Capítol
 chapters=Capítols
 character-options=Opcions de caràcters
@@ -14962,7 +14962,7 @@ sites-have-required-vocabularies.-you-need-to-create-at-least-one-category-in-al
 sites-home=Llocs
 sites-joined=Llocs web dels quals sóc membre
 sites-owned=Llocs web que gestiono
-sites-tab-description=Els llocs web només es poden assignar a una sola propietat alhora. Tots els llocs web desitjats s'han de seleccionar individualment, inclosos els que tenen relacions de fill amb els llocs web pare. Els llocs que pertanyen a un canal són necessaris fins que el canal s'hagi desseleccionat.
+sites-tab-description=Sites can only be assigned to a single property at a time. All desired sites must be selected individually, including those that have a child relationships to parent sites. (Automatic Copy)
 sites-that-i-administer=Els lloc que administro
 sites-to-sync-x=Llocs web per sincronitzar - {0}
 size=Mida
