--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
@@ -3050,7 +3050,7 @@ channel-id=Kanal-id (Automatic Translation)
 channel-name=Channel Name (Automatic Copy)
 channel-selected=Kanal markeret (Automatic Translation)
 channels=Kanaler (Automatic Translation)
-channels-tab-description=Channels can only be assigned to a single property at a time. Sites belonging to a channel will be automatically selected when a channel has been selected. (Automatic Copy)
+channels-tab-description=Channels can only be assigned to a single property at a time. (Automatic Copy)
 chapter=Chapter (Automatic Copy)
 chapters=Chapters (Automatic Copy)
 character-options=Indstillinger for tegn (Automatic Translation)
@@ -14960,7 +14960,7 @@ sites-have-required-vocabularies.-you-need-to-create-at-least-one-category-in-al
 sites-home=Sites Home (Automatic Copy)
 sites-joined=Websteder jeg er medlem af
 sites-owned=Websteder I Own
-sites-tab-description=Sites can only be assigned to a single property at a time. All desired sites must be selected individually, including those that have a child relationships to parent sites. Sites belonging to a channel are required until the channel is deselected. (Automatic Copy)
+sites-tab-description=Sites can only be assigned to a single property at a time. All desired sites must be selected individually, including those that have a child relationships to parent sites. (Automatic Copy)
 sites-that-i-administer=Sites That I Administer (Automatic Copy)
 sites-to-sync-x=Sites to Sync - {0} (Automatic Copy)
 size=Websted
