--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_en.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_en.properties
@@ -3050,7 +3050,7 @@ channel-id=Channel ID
 channel-name=Channel Name
 channel-selected=Channel Selected
 channels=Channels
-channels-tab-description=Channels can only be assigned to a single property at a time. Sites belonging to a channel will be automatically selected when a channel has been selected.
+channels-tab-description=Channels can only be assigned to a single property at a time.
 chapter=Chapter
 chapters=Chapters
 character-options=Character Options
@@ -14966,7 +14966,7 @@ sites-have-required-vocabularies.-you-need-to-create-at-least-one-category-in-al
 sites-home=Sites Home
 sites-joined=Sites I Have Joined
 sites-owned=Sites I Own
-sites-tab-description=Sites can only be assigned to a single property at a time. All desired sites must be selected individually, including those that have a child relationships to parent sites. Sites belonging to a channel are required until the channel is deselected.
+sites-tab-description=Sites can only be assigned to a single property at a time. All desired sites must be selected individually, including those that have a child relationships to parent sites.
 sites-that-i-administer=Sites That I Administer
 sites-to-sync-x=Sites to Sync - {0}
 size=Size
