--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
@@ -3050,7 +3050,7 @@ channel-id=Identificador de canal
 channel-name=Nombre de canal
 channel-selected=Canal seleccionado
 channels=Canales
-channels-tab-description=Cada canal solo puede asignarse a una única propiedad. Al seleccionar un sitio, también se seleccionarán automáticamente los canales que pertenezcan a este.
+channels-tab-description=Channels can only be assigned to a single property at a time. (Automatic Copy)
 chapter=Capítulo
 chapters=Capítulos
 character-options=Opciones de caracteres
@@ -14962,7 +14962,7 @@ sites-have-required-vocabularies.-you-need-to-create-at-least-one-category-in-al
 sites-home=Sitios
 sites-joined=Sitios web de los que soy miembro
 sites-owned=Sitios web que administro
-sites-tab-description=Cada sitio solo puede asignarse a una propiedad. Todos los sitios deben seleccionarse de forma individual, incluyendo aquellos que tengan relaciones con sitios padre. Los sitios que pertenezcan a un canal son necesarios hasta que se anule la selección del canal.
+sites-tab-description=Sites can only be assigned to a single property at a time. All desired sites must be selected individually, including those that have a child relationships to parent sites. (Automatic Copy)
 sites-that-i-administer=Sitios que yo administro
 sites-to-sync-x=Sitios que se sincronizarán: {0}
 size=Tamaño
