--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es_AR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es_AR.properties
@@ -3050,7 +3050,7 @@ channel-id=Identificador de canal
 channel-name=Channel Name (Automatic Copy)
 channel-selected=Canal seleccionado
 channels=Canales
-channels-tab-description=Channels can only be assigned to a single property at a time. Sites belonging to a channel will be automatically selected when a channel has been selected. (Automatic Copy)
+channels-tab-description=Channels can only be assigned to a single property at a time. (Automatic Copy)
 chapter=Capítulo
 chapters=Capítulos
 character-options=Opciones de caracteres
@@ -14962,7 +14962,7 @@ sites-have-required-vocabularies.-you-need-to-create-at-least-one-category-in-al
 sites-home=Sitios
 sites-joined=Sitios web de los que soy miembro
 sites-owned=Sitios web que administro
-sites-tab-description=Sites can only be assigned to a single property at a time. All desired sites must be selected individually, including those that have a child relationships to parent sites. Sites belonging to a channel are required until the channel is deselected. (Automatic Copy)
+sites-tab-description=Sites can only be assigned to a single property at a time. All desired sites must be selected individually, including those that have a child relationships to parent sites. (Automatic Copy)
 sites-that-i-administer=Sitios que yo administro
 sites-to-sync-x=Sitios que se sincronizarán: {0}
 size=Tamaño
