--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
@@ -3050,7 +3050,7 @@ channel-id=チャンネルID
 channel-name=チャンネル名
 channel-selected=チャンネルが選択されています
 channels=チャンネル
-channels-tab-description=チャンネルは同時に 1 つのプロパティにのみ割り当て可能です。チャンネルに属するサイトは、チャンネルが選択されたときに自動的に選択されます。
+channels-tab-description=Channels can only be assigned to a single property at a time. (Automatic Copy)
 chapter=章
 chapters=章
 character-options=文字オプション
@@ -14962,7 +14962,7 @@ sites-have-required-vocabularies.-you-need-to-create-at-least-one-category-in-al
 sites-home=サイトホーム
 sites-joined=参加しているサイト
 sites-owned=所有しているサイト
-sites-tab-description=サイトは同時に 1 つのプロパティにのみ割り当て可能です。親サイトに対して子のリレーションを持つものを含め、必要なすべてのサイトは個別に選択する必要があります。チャンネルに属するサイトは、チャンネルの選択が解除されるまでは必須です。
+sites-tab-description=Sites can only be assigned to a single property at a time. All desired sites must be selected individually, including those that have a child relationships to parent sites. (Automatic Copy)
 sites-that-i-administer=現在管理しているサイト
 sites-to-sync-x=同期するサイト - {0}
 size=サイズ
