--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
@@ -3050,7 +3050,7 @@ channel-id=Kanalo ID (Automatic Translation)
 channel-name=Channel Name (Automatic Copy)
 channel-selected=Pasirinktas kanalas (Automatic Translation)
 channels=Kanalai (Automatic Translation)
-channels-tab-description=Channels can only be assigned to a single property at a time. Sites belonging to a channel will be automatically selected when a channel has been selected. (Automatic Copy)
+channels-tab-description=Channels can only be assigned to a single property at a time. (Automatic Copy)
 chapter=Skyrius (Automatic Translation)
 chapters=Skyriai (Automatic Translation)
 character-options=Simbolių parinktys (Automatic Translation)
@@ -14960,7 +14960,7 @@ sites-have-required-vocabularies.-you-need-to-create-at-least-one-category-in-al
 sites-home=Svetainių pagrindinis puslapis (Automatic Translation)
 sites-joined=Svetainės, prie kurių prisijungiau (Automatic Translation)
 sites-owned=Svetainės, kurias turiu (Automatic Translation)
-sites-tab-description=Sites can only be assigned to a single property at a time. All desired sites must be selected individually, including those that have a child relationships to parent sites. Sites belonging to a channel are required until the channel is deselected. (Automatic Copy)
+sites-tab-description=Sites can only be assigned to a single property at a time. All desired sites must be selected individually, including those that have a child relationships to parent sites. (Automatic Copy)
 sites-that-i-administer=Svetainės, kurias administravau (Automatic Translation)
 sites-to-sync-x=Sites to Sync - {0} (Automatic Copy)
 size=Dydis (Automatic Translation)
