--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
@@ -3050,7 +3050,7 @@ channel-id=Kanal-ID (Automatic Translation)
 channel-name=Channel Name (Automatic Copy)
 channel-selected=Kanal valgt (Automatic Translation)
 channels=Kanaler (Automatic Translation)
-channels-tab-description=Channels can only be assigned to a single property at a time. Sites belonging to a channel will be automatically selected when a channel has been selected. (Automatic Copy)
+channels-tab-description=Channels can only be assigned to a single property at a time. (Automatic Copy)
 chapter=Kapittel
 chapters=Kapitler
 character-options=Alternativer for tegn (Automatic Translation)
@@ -14960,7 +14960,7 @@ sites-have-required-vocabularies.-you-need-to-create-at-least-one-category-in-al
 sites-home=Nettsted-hjem
 sites-joined=Nettsteder jeg har blitt medlem av
 sites-owned=Nettsteder jeg eier
-sites-tab-description=Sites can only be assigned to a single property at a time. All desired sites must be selected individually, including those that have a child relationships to parent sites. Sites belonging to a channel are required until the channel is deselected. (Automatic Copy)
+sites-tab-description=Sites can only be assigned to a single property at a time. All desired sites must be selected individually, including those that have a child relationships to parent sites. (Automatic Copy)
 sites-that-i-administer=Nettsteder som jeg administrerer
 sites-to-sync-x=Nettsteder å synkronisere - {0}
 size=Størrelse
