--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
@@ -3050,7 +3050,7 @@ channel-id=ID do canal (Automatic Translation)
 channel-name=Channel Name (Automatic Copy)
 channel-selected=Canal Selecionado (Automatic Translation)
 channels=Canais (Automatic Translation)
-channels-tab-description=Channels can only be assigned to a single property at a time. Sites belonging to a channel will be automatically selected when a channel has been selected. (Automatic Copy)
+channels-tab-description=Channels can only be assigned to a single property at a time. (Automatic Copy)
 chapter=Capítulo
 chapters=Capítulos
 character-options=Opções de caracteres (Automatic Translation)
@@ -14962,7 +14962,7 @@ sites-have-required-vocabularies.-you-need-to-create-at-least-one-category-in-al
 sites-home=Página Inicial dos Sites
 sites-joined=Sites aos quais me associei
 sites-owned=Sites que eu possuo
-sites-tab-description=Sites can only be assigned to a single property at a time. All desired sites must be selected individually, including those that have a child relationships to parent sites. Sites belonging to a channel are required until the channel is deselected. (Automatic Copy)
+sites-tab-description=Sites can only be assigned to a single property at a time. All desired sites must be selected individually, including those that have a child relationships to parent sites. (Automatic Copy)
 sites-that-i-administer=Sites que eu administro
 sites-to-sync-x=Sites to Sync - {0} (Automatic Copy)
 size=Tamanho
