--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
@@ -3050,7 +3050,7 @@ channel-id=Идентификатор канала (Automatic Translation)
 channel-name=Channel Name (Automatic Copy)
 channel-selected=Выбранный канал (Automatic Translation)
 channels=Каналами (Automatic Translation)
-channels-tab-description=Channels can only be assigned to a single property at a time. Sites belonging to a channel will be automatically selected when a channel has been selected. (Automatic Copy)
+channels-tab-description=Channels can only be assigned to a single property at a time. (Automatic Copy)
 chapter=Глава
 chapters=Главы
 character-options=Параметры символов (Automatic Translation)
@@ -14960,7 +14960,7 @@ sites-have-required-vocabularies.-you-need-to-create-at-least-one-category-in-al
 sites-home=Домашня страница сайтов
 sites-joined=Сайты, в которых я состою
 sites-owned=Мои сайты
-sites-tab-description=Sites can only be assigned to a single property at a time. All desired sites must be selected individually, including those that have a child relationships to parent sites. Sites belonging to a channel are required until the channel is deselected. (Automatic Copy)
+sites-tab-description=Sites can only be assigned to a single property at a time. All desired sites must be selected individually, including those that have a child relationships to parent sites. (Automatic Copy)
 sites-that-i-administer=Сайты которые я администрирую
 sites-to-sync-x=Sites to Sync - {0} (Automatic Copy)
 size=Размер
