--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
@@ -3050,7 +3050,7 @@ channel-id=Identifikácia kanála (Automatic Translation)
 channel-name=Channel Name (Automatic Copy)
 channel-selected=Vybratý kanál (Automatic Translation)
 channels=Kanály (Automatic Translation)
-channels-tab-description=Channels can only be assigned to a single property at a time. Sites belonging to a channel will be automatically selected when a channel has been selected. (Automatic Copy)
+channels-tab-description=Channels can only be assigned to a single property at a time. (Automatic Copy)
 chapter=Kapitola
 chapters=Kapitoly
 character-options=Možnosti znakov (Automatic Translation)
@@ -14960,7 +14960,7 @@ sites-have-required-vocabularies.-you-need-to-create-at-least-one-category-in-al
 sites-home=Domov sídiel
 sites-joined=Sídla, ku ktorým som sa pripojil
 sites-owned=Sídla, ktoré vlastím
-sites-tab-description=Sites can only be assigned to a single property at a time. All desired sites must be selected individually, including those that have a child relationships to parent sites. Sites belonging to a channel are required until the channel is deselected. (Automatic Copy)
+sites-tab-description=Sites can only be assigned to a single property at a time. All desired sites must be selected individually, including those that have a child relationships to parent sites. (Automatic Copy)
 sites-that-i-administer=Sídla, ktoré spravujem ja
 sites-to-sync-x=Sites to Sync - {0} (Automatic Copy)
 size=Veľkosť
