--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
@@ -3050,7 +3050,7 @@ channel-id=ชาแนลไอดี
 channel-name=Channel Name (Automatic Copy)
 channel-selected=เลือกชาแนล
 channels=ชาแนล
-channels-tab-description=Channels can only be assigned to a single property at a time. Sites belonging to a channel will be automatically selected when a channel has been selected. (Automatic Copy)
+channels-tab-description=Channels can only be assigned to a single property at a time. (Automatic Copy)
 chapter=บท
 chapters=บท
 character-options=ตัวเลือกตัวอักษร
@@ -14960,7 +14960,7 @@ sites-have-required-vocabularies.-you-need-to-create-at-least-one-category-in-al
 sites-home=ไซต์หลัก
 sites-joined=ไซต์ที่ฉันเข้าร่วม
 sites-owned=ไซต์ที่ฉันเป็นเจ้าของ
-sites-tab-description=Sites can only be assigned to a single property at a time. All desired sites must be selected individually, including those that have a child relationships to parent sites. Sites belonging to a channel are required until the channel is deselected. (Automatic Copy)
+sites-tab-description=Sites can only be assigned to a single property at a time. All desired sites must be selected individually, including those that have a child relationships to parent sites. (Automatic Copy)
 sites-that-i-administer=ไซต์ที่ฉันดูแล
 sites-to-sync-x=ไซต์ที่จะซิงค์ - {0}
 size=ขนาด
