--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
@@ -3050,7 +3050,7 @@ channel-id=Ідентифікатор каналу (Automatic Translation)
 channel-name=Channel Name (Automatic Copy)
 channel-selected=Вибраний канал (Automatic Translation)
 channels=Канали (Automatic Translation)
-channels-tab-description=Channels can only be assigned to a single property at a time. Sites belonging to a channel will be automatically selected when a channel has been selected. (Automatic Copy)
+channels-tab-description=Channels can only be assigned to a single property at a time. (Automatic Copy)
 chapter=Розділ
 chapters=Розділи
 character-options=Параметри символів (Automatic Translation)
@@ -14960,7 +14960,7 @@ sites-have-required-vocabularies.-you-need-to-create-at-least-one-category-in-al
 sites-home=Домашня сторінка сайтів (Automatic Translation)
 sites-joined=Сайти, до які я приєднався (Automatic Translation)
 sites-owned=Сайти, які я власний (Automatic Translation)
-sites-tab-description=Sites can only be assigned to a single property at a time. All desired sites must be selected individually, including those that have a child relationships to parent sites. Sites belonging to a channel are required until the channel is deselected. (Automatic Copy)
+sites-tab-description=Sites can only be assigned to a single property at a time. All desired sites must be selected individually, including those that have a child relationships to parent sites. (Automatic Copy)
 sites-that-i-administer=Сайти, які я адмініструю (Automatic Translation)
 sites-to-sync-x=Sites to Sync - {0} (Automatic Copy)
 size=Розмір
