LPS-77699 Update Translations

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
@@ -14245,7 +14245,7 @@ select-tags=꼬리표를 선정하십시요
 select-tasks=작업 선택
 select-tasks-to-reassign=재배정 작업 선택
 select-tasks-to-update=갱신 작업 선택
-select-template=\n템플릿 선택
+select-template=템플릿 선택
 select-the-action-that-this-role-can-perform-on-the-x-portlet=이 역할이 <em>{0}</em> 포틀릿에서 수행할 수 있는 작업을 선택합니다.
 select-the-action-that-this-role-can-perform-on-the-x-resource=이 역할이 <em>{0}</em> 리소스에서 수행할 수 있는 작업을 선택합니다.
 select-the-actions-that-this-role-can-perform-on-each-resource-of-x-portlet=이 역할이 <em>{0}</em> 포틀릿의 각 리소스에서 수행할 수 있는 작업을 선택합니다.
