--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
@@ -4614,7 +4614,7 @@ current-password=סיסמא נוכחית
 current-results=תוצאות נוכחיות
 current-scope=היקף נוכחי (Automatic Translation)
 current-selected-menu-x=התפריט הנוכחי שנבחר: {0}
-current-signifies-current-user-groups-associated-with-the-x-role.-available-signifies-all-user-groups-associated-with-the-x-x=<em>נוכחי</em> מסמל קבוצות משתמשים נוכחיות המקושרות עם תפקיד <em>{0}<em/>. <em>זמין</em> מסמל את כל קבוצות המשתמשים המקושרות עם {2} <em/>{1}<em>.
+current-signifies-current-user-groups-associated-with-the-x-role.-available-signifies-all-user-groups-associated-with-the-x-x=<em>נוכחי</em> מסמל קבוצות משתמשים נוכחיות המקושרות עם תפקיד <em>{0}</em>. <em>זמין</em> מסמל את כל קבוצות המשתמשים המקושרות עם {2} <em>{1}</em>.
 current-signifies-current-users-associated-with-the-x-role.-available-signifies-all-users-associated-with-the-x-x=<em>נוכחי</em> מסמל את המשתמשים הנוכחיים המקושרים עם תפקיד <em>{0}</em>. n<em>זמין</em> מסמל את כל המשתמשים המקושרים עם <em>{1}</em> {2}.
 current-site=אתר נוכחי
 current-site-calendars=לוחות שנה של האתר הנוכחי
