--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_en.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_en.properties
@@ -2263,9 +2263,9 @@ background-state-warning=Background State Warning
 background-styles=Background Styles
 background-task-manager-configuration-name=Background Task Manager Configuration
 background-task-workers-core-size=Workers Core Size
-background-task-workers-core-size-help=The number of worker threads always available for executing background tasks. This setting cannot exceed the workers maximum size setting.
+background-task-workers-core-size-help=Set the number of worker threads always available for executing background tasks. This setting cannot exceed the workers maximum size setting.
 background-task-workers-max-size=Workers Maximum Size
-background-task-workers-max-size-help=The maximum number of worker threads for executing background tasks.
+background-task-workers-max-size-help=Set the maximum number of worker threads for executing background tasks.
 backspace=Backspace
 bad-request=Bad Request
 ban-date=Ban Date
@@ -7775,7 +7775,7 @@ import-siteminder-users-from-ldap-help=If this is checked, users authenticated f
 import-status=Import Status
 import-structure=Import Structure
 import-task-isolation=Import Task Isolation Level
-import-task-isolation-help=Set the isolation level for site template propagation import tasks. The default value is GROUP, this means that only one site template propagation import task can run at the same time for the same target site. However, you can set its value to COMPANY as well. This will reduce the parallelism by only allowing one task to be run on the company level. In general, use this option to reduce the load on the portal, in exchange for delaying site template propagations.
+import-task-isolation-help=Set the isolation level for site template propagation import tasks. The default is set to group. This means that only one site template propagation import task can run at the same time for the same target site. However, you can set it to company as well. This will reduce the parallelism by only allowing one task to be run on the company level. In general, use this option to reduce the load on the portal in exchange for delaying site template propagations.
 import-translation=Import Translation
 import-translations=Import Translations
 import-user-preferences-help=User preferences can only be successfully imported when the user UUIDs match.
@@ -8971,7 +8971,7 @@ layout-set-prototype-configuration-description=Configure when automatic propagat
 layout-set-prototype-configuration-name=Site Templates
 layout-set-prototype-intranet-site-description=Site with Documents and News
 layout-set-prototype-intranet-site-title=Intranet Site
-layout-set-prototype-system-configuration-description=Configure system level site template options
+layout-set-prototype-system-configuration-description=Configure system level site template options.
 layout-set-prototype-system-configuration-name=Site Templates
 layout-template=Layout Template
 layout-template-1-2-1-columns-i=1-2-1 Columns (50/50)
