--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -2263,9 +2263,9 @@ background-state-warning=Hintergrundstatus Warnung
 background-styles=Hintergrundstil
 background-task-manager-configuration-name=Background Task Manager Configuration (Automatic Copy)
 background-task-workers-core-size=Workers Core Size (Automatic Copy)
-background-task-workers-core-size-help=The number of worker threads always available for executing background tasks. This setting cannot exceed the workers maximum size setting. (Automatic Copy)
+background-task-workers-core-size-help=Set the number of worker threads always available for executing background tasks. This setting cannot exceed the workers maximum size setting. (Automatic Copy)
 background-task-workers-max-size=Workers Maximum Size (Automatic Copy)
-background-task-workers-max-size-help=The maximum number of worker threads for executing background tasks. (Automatic Copy)
+background-task-workers-max-size-help=Set the maximum number of worker threads for executing background tasks. (Automatic Copy)
 backspace=Rücktaste
 bad-request=Fehlerhafte Anfrage
 ban-date=Verbannungsdatum
@@ -7775,7 +7775,7 @@ import-siteminder-users-from-ldap-help=Ist diese Option ausgewählt, werden Benu
 import-status=Importstatus
 import-structure=Struktur importieren
 import-task-isolation=Import Task Isolation Level (Automatic Copy)
-import-task-isolation-help=Set the isolation level for site template propagation import tasks. The default value is GROUP, this means that only one site template propagation import task can run at the same time for the same target site. However, you can set its value to COMPANY as well. This will reduce the parallelism by only allowing one task to be run on the company level. In general, use this option to reduce the load on the portal, in exchange for delaying site template propagations. (Automatic Copy)
+import-task-isolation-help=Set the isolation level for site template propagation import tasks. The default is set to group. This means that only one site template propagation import task can run at the same time for the same target site. However, you can set it to company as well. This will reduce the parallelism by only allowing one task to be run on the company level. In general, use this option to reduce the load on the portal in exchange for delaying site template propagations. (Automatic Copy)
 import-translation=Übersetzung importieren
 import-translations=Übersetzungen importieren
 import-user-preferences-help=Benutzereinstellungen können nur dann erfolgreich importiert werden, wenn die UUIDs übereinstimmen.
@@ -8967,7 +8967,7 @@ layout-set-prototype-configuration-description=Mit den Einstellungen in dieser K
 layout-set-prototype-configuration-name=Sitevorlagen
 layout-set-prototype-intranet-site-description=Site mit Dokumenten und Nachrichten
 layout-set-prototype-intranet-site-title=Intranet-Site
-layout-set-prototype-system-configuration-description=Configure system level site template options (Automatic Copy)
+layout-set-prototype-system-configuration-description=Configure system level site template options. (Automatic Copy)
 layout-set-prototype-system-configuration-name=Site Templates (Automatic Copy)
 layout-template=Layoutvorlage
 layout-template-1-2-1-columns-i=1-2-1 Spalten (50/50)
