--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
@@ -2263,9 +2263,9 @@ background-state-warning=Background State Warning (Automatic Copy)
 background-styles=Arkaplan Stili
 background-task-manager-configuration-name=Background Task Manager Configuration (Automatic Copy)
 background-task-workers-core-size=Workers Core Size (Automatic Copy)
-background-task-workers-core-size-help=The number of worker threads always available for executing background tasks. This setting cannot exceed the workers maximum size setting. (Automatic Copy)
+background-task-workers-core-size-help=Set the number of worker threads always available for executing background tasks. This setting cannot exceed the workers maximum size setting. (Automatic Copy)
 background-task-workers-max-size=Workers Maximum Size (Automatic Copy)
-background-task-workers-max-size-help=The maximum number of worker threads for executing background tasks. (Automatic Copy)
+background-task-workers-max-size-help=Set the maximum number of worker threads for executing background tasks. (Automatic Copy)
 backspace=geri tuşu (Automatic Translation)
 bad-request=Hatalı İstek
 ban-date=Yasaklanma Tarihi
@@ -7775,7 +7775,7 @@ import-siteminder-users-from-ldap-help=Bu işaretlenirse, Portalda bulunmayan Si
 import-status=Import Status (Automatic Copy)
 import-structure=Import Structure (Automatic Copy)
 import-task-isolation=Import Task Isolation Level (Automatic Copy)
-import-task-isolation-help=Set the isolation level for site template propagation import tasks. The default value is GROUP, this means that only one site template propagation import task can run at the same time for the same target site. However, you can set its value to COMPANY as well. This will reduce the parallelism by only allowing one task to be run on the company level. In general, use this option to reduce the load on the portal, in exchange for delaying site template propagations. (Automatic Copy)
+import-task-isolation-help=Set the isolation level for site template propagation import tasks. The default is set to group. This means that only one site template propagation import task can run at the same time for the same target site. However, you can set it to company as well. This will reduce the parallelism by only allowing one task to be run on the company level. In general, use this option to reduce the load on the portal in exchange for delaying site template propagations. (Automatic Copy)
 import-translation=İthalat Çevirisi (Automatic Translation)
 import-translations=Import Translations (Automatic Copy)
 import-user-preferences-help=Kullanıcı tercihleri yalnızca kullanıcı UUID'leri eşleştiğinde başarıyla içe aktarılabilir. (Automatic Translation)
@@ -8965,7 +8965,7 @@ layout-set-prototype-configuration-description=Configure when automatic propagat
 layout-set-prototype-configuration-name=Şablonları Görüntüle
 layout-set-prototype-intranet-site-description=Belgeler ve Haberler içeren site (Automatic Translation)
 layout-set-prototype-intranet-site-title=Intranet Sitesi (Automatic Translation)
-layout-set-prototype-system-configuration-description=Configure system level site template options (Automatic Copy)
+layout-set-prototype-system-configuration-description=Configure system level site template options. (Automatic Copy)
 layout-set-prototype-system-configuration-name=Site Templates (Automatic Copy)
 layout-template=Yerleşim Şablonu
 layout-template-1-2-1-columns-i=1-2-1 Sütunlar (50/50) (Automatic Translation)
